# CANBus-DataAquisition

./: .gitignore  .gitmodules  BOM.txt  README.md
Arduino/CAN_RTOS/: CAN_RTOS.ino
Arduino/libraries/: REAMDE.md
Arduino/libraries/ChibiOS_AVR/utility/: chthreads.c
Arduino/libraries/FreeRTOS/examples/Blink_AnalogRead/: Blink_AnalogRead.ino
Docs/: BlockDiagram.drawio
ESP32/: CMakeLists.txt  README.md
ESP32/main/: main.c
RPi/: CMakeLists.txt  README.md
RPi/include/: SocketCAN.h
RPi/src/: SocketCAN.c  main.c
RPi/test/: CMakeLists.txt  main.cpp
